# QtParkingPOS

./: .clang-format  CMakeLists.txt  QAboutDialog  QAboutDialog.cpp  QAboutDialog.ui  QAdministratorWindow.cpp  QAdministratorWindow.h  QAdministratorWindow.ui  QCheckInWindow.cpp  QCheckInWindow.h  QCheckOutWindow.cpp  QCheckOutWindow.h  QCheckOutWindow.ui  QDatabaseManager  QDatabaseManager.cpp  QDatabaseManager.h  QLoginDialog  QLoginDialog.cpp  QLoginDialog.h  QParkingPOS.h  QParkingSplashscreen.cpp  QRegisterDialog  QRegisterDialog.cpp  QtParkingPOS.pro  README.md  aboutdialog.cpp  aboutdialog.ui  checkinwindow.cpp  checkinwindow.h  checkinwindow.ui  checkoutwindow.cpp  checkoutwindow.h  checkoutwindow.ui  dbmanager.cpp  dbmanager.h  images.qrc  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  (+6 more)
images/: icon.xcf  splash_screen.xcf
includes/: QCheckOutWindow.h  QCustomSplash.h  QLoginDialog.h  QParkingSplashscreen.h  QRegisterDialog.h
resources/: images.qrc
src/: QAdministratorWindow.cpp  QAdministratorWindow.ui  QCheckInWindow.ui  QCheckOutWindow.cpp  QCustomSplash.cpp  QDatabaseManager.cpp  QLoginDialog.ui  QParkingPOS.cpp  QParkingSplashscreen.ui  QRegisterDialog.cpp  QRegisterDialog.ui  main.cpp
